Fixed icons not aligning properly on homepage and updated background for Recipes page to match Home page

--- a/core/src/components/RecipeList.css
+++ b/core/src/components/RecipeList.css
@@ -1,7 +1,9 @@
 .recipe-list {
-  background-color: rgb(49, 49, 49);
+  background: linear-gradient(135deg,  #10592e, #2a5298);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   padding: 80px 20px 20px;
+  width: 100%;
+  max-width: 1200px;
 }
